@@ -1,4 +1,5 @@
 
 Version 0.2
 	Improved Documentation
+	Added SetInformation for additional error information to PdfError
 	
